--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.1.29",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.4",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@toast-ui/editor": "^3.2.2",
+        "marked": "^16.3.0"
     }
 }
