--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@toast-ui/editor": "^3.2.2",
+        "@tiptap/extension-link": "^3.17.0",
+        "@tiptap/extension-placeholder": "^3.17.0",
+        "@tiptap/extension-underline": "^3.17.0",
+        "@tiptap/starter-kit": "^3.17.0",
+        "@tiptap/vue-3": "^3.17.0",
         "marked": "^16.3.0",
         "remixicon": "^4.7.0"
     }
