--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@vitejs/plugin-vue": "^6.0.1",
         "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
+        "baseline-browser-mapping": "^2.9.19",
         "concurrently": "^9.0.1",
         "daisyui": "^5.3.7",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.5.6",
+        "sass-embedded": "^1.97.3",
         "tailwindcss": "^4.1.14",
         "vite": "^7.0.4",
         "vue": "^3.4.0"
@@ -28,6 +30,7 @@
         "@tiptap/starter-kit": "^3.17.0",
         "@tiptap/vue-3": "^3.17.0",
         "marked": "^16.3.0",
-        "remixicon": "^4.7.0"
+        "remixicon": "^4.7.0",
+        "vuedraggable": "^4.1.0"
     }
 }
